# elixir-workers

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md
atomvm-wasi/: CMakeLists.txt
atomvm-wasi/include/: avm_version.h  bifs_hash.h  nifs_hash.h  wasi_compat.h  wasi_sys.h
atomvm-wasi/src/: main.c  platform_defaultatoms.c  platform_defaultatoms.def  platform_defaultatoms.h  platform_nifs.c  sys.c
elixir-app/: mix.exs
elixir-app/lib/: elixir_workers.ex
elixir-app/lib/atomvm/: wasi.ex
elixir-app/lib/elixir_workers/: body.ex  d1.ex  json.ex  middleware.ex  router.ex  url.ex
examples/hello_world/: .gitignore  mix.exs
examples/hello_world/lib/: hello_world.ex
examples/hello_world/lib/hello_world/: router.ex
scripts/: build-app.sh  build-atomvm.sh  pack_avm.py  setup.sh
worker/: package-lock.json  package.json  tsconfig.json  wrangler.jsonc
worker/src/: declarations.d.ts  index.js  index.ts
